# Disona

./: Dockerfile  README.md  bot.py  config.toml  dmx.py  main.py  pyproject.toml
.example/: .env.template
bot/: bot.py
fuckity/: bot.py  config.toml  main.py
fuckity/bot/: bot.py  config.py
